--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "my-vite-app",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -11,23 +10,34 @@
   },
   "dependencies": {
     "@babylonjs/gui": "6.11.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
+    "ajv": "^8.12.0",
     "babylonjs": "6.11.1",
-    "react": "^17.0.0"
+    "esbuild": "^0.19.11",
+    "mobx": "^6.12.0",
+    "react": "^18.0.2",
+    "react-refresh": "^0.14.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.14",
-    "@types/react-dom": "^18.2.6",
+    "@types/react": "^18.2.46",
+    "@types/react-dom": "^18.2.18",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
     "@typescript-eslint/parser": "^5.61.0",
     "@vitejs/plugin-react-swc": "^3.3.2",
     "babel-loader": "^9.1.3",
+    "esbuild-loader": "^4.0.2",
     "eslint": "^8.44.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.1",
+    "html-webpack-plugin": "^5.6.0",
     "less": "^4.2.0",
-    "react-dom": "^17.0.2",
-    "typescript": "^5.0.2",
+    "react-dom": "^18.0.2",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.3.3",
     "vite": "^4.4.0",
-    "vite-plugin-style-import": "^2.0.0"
+    "vite-plugin-style-import": "^2.0.0",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   }
 }
